src/stylesheets/components/_highlight.scss
/*--- Hero Component ---*/

.hero {
  margin-bottom: 0px;
  @extend .theme--deep-purple;
  @include headings-margin-top(0);
  @include last-child;
  @include accent($grey-5);
  padding: $base-spacing-unit-tiny 0 ($base-spacing-unit-tiny * 2);

  @include media($desktop) {
    padding: $base-spacing-unit-medium 0 ($base-spacing-unit-medium * 2) 0;

    .container {
      padding-right: ($base-spacing-unit-extra-large * 6);
    }
  }
}

/*--- Status Components ---*/

.status--banner {
  @include fontsize(14);
  line-height: 1.125; // 18px;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  @include headings-margin-top(0);
  @include last-child;
  @extend .theme--deep-purple--light;
  padding: ($base-spacing-unit-small / 2)  0 ($base-spacing-unit + 1) 0;

  @include media($tablet) {
    @include fontsize(16);
    line-height: 1.5; // 24px
  }
}

.has-js .cookie {
  display: none;
}

.status--highlight {
  border-left-style: solid;
  @extend .theme--purple--light;
  @include headings-margin-top(0);
  @include last-child;
  padding: $base-spacing-unit-small;
  border-left-width: $base-spacing-unit;
  margin-bottom: $base-spacing-unit-small;
}

/*--- Label Components ---*/

.hint {
  margin-right: $base-spacing-unit;
  padding: ($base-spacing-unit - 4) $base-spacing-unit;
}

